Refactor: SSE 보완